# HaskellProjects

./: README.md
ShapeSVGConverter/: shape-webserver.cabal
ShapeSVGConverter/.stack-work/install/3573363d/flag-cache/: aeson-1.1.2.0-IYYaF432Hu8HQKp7no3ap1  aeson-pretty-0.8.5-5mYVbvFiTi7CCeIahcTyxL  ansi-terminal-0.6.3.1-CdiTOvx5ZEQ2RerUYIP05k  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.3-m1TEyTenyr5nJN40TpHVj  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  blaze-builder-0.4.0.2-LxClHUTiKUUAxWtvJ5Oeoy  blaze-html-0.9.0.1-GQ0yZtPYt2i2KdgnUEOA8p  blaze-markup-0.8.0.0-GsxkVbRgODkgUQDmmDVob  blaze-svg-0.3.6.1-E6CYGgfBIFH476loEvWeGj  byteorder-1.0.4-9NlNHkBVdo7F1prFVKrkcH  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  case-insensitive-1.2.0.10-1D5OUKQ7UrJ7IpOe0di4Un  cmdargs-0.10.18-1MOxB7BXiUZGCBZB9Kx8qK  conduit-1.2.12.1-CTYKTJmwFo81r4LrAKDD8i  conduit-extra-1.1.17-FrTamKwpf3F9ta0nNY68aV  cookie-0.4.3-LVlxdgOdUJj73o1VFenWKF  data-default-class-0.1.2.0-GsXqKN6o1X9jr0fF5qCVD  dlist-0.8.0.3-BHFBNaw8k6n9WiaUNzoXpk  easy-file-0.2.1-5ig8rCGsBnD1LYczMQvq1o  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fast-logger-2.4.10-EzPG6cXTz5mFruQq6OdJ4C  hashable-1.2.6.1-2ZLNuHq395GGIHwEHuqZol  hex-0.1.2-HUUA94TVE748JTmJozIoTC  http-date-0.0.6.1-AkYFHBFn90lGSerD29arC9  http-types-0.9.1-G7E1zHPzooHCYxKqGuQmxY  http2-1.6.3-5WuWRsIVuKR43Sq9Cs2O4Z  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  (+38 more)
ShapeSVGConverter/app/: Main.hs  Shapes.hs
